compiler/w_session/tests/errors/out-of-scope.w
fn main(): u32 {
    {
        let a = 1;
    };
    a
}