compiler/w_session/tests/errors/out-of-scope.stderr
tests/errors/out-of-scope.w:5:5: error: identifier does not exist
    a
    ^
